--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    width: max-content;
+    width: 86.164vw;
     gap: 61px;
     position: relative;
     top: 7.943vh;
